All in once kubernete_yaml - Copy/orderpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: orderms-pod
  labels:
    name: orderms-pod
    app: pizzashop
spec:
  containers: 
    - name: orderms-pod
      image: bhumswrang/orderms
      ports:
      - containerPort: 8089
