All in once kubernete_yaml - Copy/pizza_catalogueinservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: pizza-catalogue-inservice
spec:
  # type: NodePort
  ports: 
    - port: 8086
      # targetPort: 8086
      # nodePort: 30008
  selector: 
    name: pizza-cataloguems-pod
    app: pizzashop
