All in once kubernete_yaml - Copy/couponingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coupon-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mscoupon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: couponinservice
            port:
              number: 8081
