All in once kubernete_yaml - Copy/orderingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: msorder.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: order-inservice
            port:
              number: 8089
